backends/k8s/pgtileserv/yaml/pgtileserv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgtileserv
  namespace: pgtileserv
  labels:
    app: pgtileserv
spec:
  ports:
    - name: web
      port: 80
      targetPort: 7800
  selector:
    app: pgtileserv
  type: ClusterIP # LoadBalancer # NodePort #  
  ## load balancer will make the service accessible on the internet using an external ip but no https
