backends/k8s/pgtileserv/yaml/pgtileserv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgtileserv-ssl-tls-ingress
  namespace: pgtileserv
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  tls:
    - hosts:
        - pgtileserv.undpgeohub.org # update IP address here
      secretName: pgtileserv-cert
  rules:
    - host: pgtileserv.undpgeohub.org # update IP address here
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pgtileserv
                port:
                  number: 80
